fix: use scale to take nav out of screen to prevent clickable links

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,11 @@ html {
     @apply text-secondary;
 }
 
-header li {
+header a {
     @apply transition duration-300;
 }
 
-header li:hover {
+header a:hover {
     @apply text-primary;
 }
 
